--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <!-- Styles -->
     <link rel="stylesheet" href="styles/layout.css">
-    <!-- Importing Custom Elements -->
+    <!-- Load components templates -->
     <link rel="import" href="components/fileUploader/template.html" id="imageUploaderTemplate">
     <link rel="import" href="components/imageThumbnail/template.html" id="imageThumbnailTemplate">
 </head>
@@ -17,7 +17,7 @@
     <section id="thumbnails">
     </section>
 
-    <!-- load components -->
+    <!-- Load components -->
     <script src="components/fileUploader/init.js"></script>
     <script src="components/imageThumbnail/init.js"></script>
 
